--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/e-learning.png)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold text-center">Capacitaciones a OTEC</h5>
                         <p class="card-text">
